--- a/Week 1/Weekend Tutorial/Challenge 3.css
+++ b/Week 1/Weekend Tutorial/Challenge 3.css
@@ -8,7 +8,7 @@
     margin: 20px 40px 60px 80px;
     border: 20px 40px 60px 80px;
 }
-
+// Class name normally is small letter
 .Challenge3 {
     text-align: center;
     padding-top: 200px;
